# ESP32_Hexagons

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  app_diagnostics.c  app_diagnostics.h  app_version.h  config.c  config.h  hex.c  hex.h  http_server.c  http_server.h  iot_client.c  iot_client.h  iot_server_config.h  main.c  ota_update.c  ota_update.h  rgb_led.c  rgb_led.h  state_save.c  state_save.h  tasks_common.h  wifi.c  wifi.h  wifi_app.c  wifi_app.h
main/webpage/: config.html  config_script.js  index.html  script.js  style.css
